Revise index.html

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
 								<ul class="features">
 									<li>
 										<i class="icon solid major style1 fa-solid fa-code"></i>
-										<h3>HTML5、CSS3、SCSS</h3>
-										<p>已學習前端程式設計近一年</p>
+										<h3>HTML5、CSS3</h3>
+										<p>已有前端程式設計實務近一年</p>
 									</li>
 									<li>
 										<i class="icon solid major style2 fa-solid fa-compass-drafting"></i>
@@ -80,7 +80,7 @@
 									</li>
 									<li>
 										<i class="icon solid major style3 fa-solid fa-j"></i>
-										<h3>JQuery</h3>
+										<h3>JavaScript、JQuery</h3>
 										<p>熟悉互動式動畫效果 ; 正在學習 Vue.js 前端框架</p>
 									</li>
 									<li>
@@ -114,14 +114,14 @@
 									</li>
 									<li class="style4">
 										<span class="icon solid"><i class="fa-brands fa-python"></i></span>
-										<strong>Python</strong>
+										<strong>Php</strong>
 									</li>
 									<li class="style5">
 										<span class="icon"><i class="fa-solid fa-server"></i></span>
-										<strong>Django</strong>
+										<strong>MySQL</strong>
 									</li>
 								</ul>
-								<p>熟悉Git版本控制。為了更進一步進行網站的架設，正在學習將 Python Django 為主的 MVC 後端框架架設於 Linux server，同時正在熟習 SQL 與 relational database。</p>
+								<p>熟悉Git版本控制。為了更進一步進行網站的架設，正在學習將 Apache 網頁伺服器架設於 Linux 作業系統，同時正在熟習 SQL 與 relational database。</p>
 								<!-- <footer class="major">
 									<ul class="actions special">
 										<li><a href="generic.html" class="button">Learn More</a></li>
@@ -179,6 +179,10 @@
 									<div class="table-wrapper">
 										<table>
 											<tbody>
+												<tr>
+													<td>優橋貿易股份有限公司 </td>
+													<td>網頁前端實習生</td>
+												</tr>
 												<tr>
 													<td>Café&Meal MUJI </td>
 													<td>外場全職夥伴</td>
