--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<span class="logo"><img src="images/YuRu.png" alt="" /></span>
+						<span class="logo"><img src="images/YuRu02.jpg" alt="" /></span>
 						<h1>YuRu's CV</h1>
 						<ul class="icons">
 							<li><a href="https://github.com/910475syk" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
