Revise index.html

--- a/index.html
+++ b/index.html
@@ -113,11 +113,11 @@
 										<strong>Linux</strong>
 									</li>
 									<li class="style4">
-										<span class="icon solid"><i class="fa-brands fa-python"></i></span>
+										<span class="icon solid"><i class="fa-brands fa-php"></i></span>
 										<strong>Php</strong>
 									</li>
 									<li class="style5">
-										<span class="icon"><i class="fa-solid fa-server"></i></span>
+										<span class="icon"><i class="fa-solid fa-database"></i></span>
 										<strong>MySQL</strong>
 									</li>
 								</ul>
